<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Falcon ICP</string>
    <string name="action_settings">Settings</string>
    <string name="icpbutton1">1</string>
    <string name="icpbutton2">2</string>
    <string name="icpbutton3">3</string>
    <string name="icpbutton4">4</string>
    <string name="icpbutton5">5</string>
    <string name="icpbutton6">6</string>
    <string name="icpbutton7">7</string>
    <string name="icpbutton8">8</string>
    <string name="icpbutton9">9</string>
    <string name="icpbutton0">0</string>
    <string name="icpbuttonrcl">RCL</string>
    <string name="icpbuttonent">ENT</string>
    <string name="com1">COM 1</string>
    <string name="com2">COM 2</string>
    <string name="iff">IFF</string>
    <string name="list">LIST</string>
    <string name="aa">A-A</string>
    <string name="ag">A-G</string>
    <string name="arrow_up">UP</string>
    <string name="arrow_down">DOWN</string>
    <string name="dcs">DCS</string>
    <string name="driftwarn">DRIFT WARN</string>
    <string name="pref_connection_title">Connection</string>
    <string name="pref_summary_server_ip">0.0.0.0</string>
    <string name="pref_title_server_ip">Server IP</string>
    <string name="pref_summary_server_port">7654</string>
    <string name="pref_title_server_port">Port</string>
    <string name="pref_summary_timeout">10</string>
    <string name="pref_title_timeout">Timeout</string>
    <string name="pref_summary_autoconnect">Autoconnect on resume</string>
    <string name="pref_title_autoconnect">Autoconnect</string>
    <string name="pref_display_title">Display</string>
	<string name="pref_summary_backlight">Keep backlight on</string>
    <string name="pref_title_backlight">Backlight</string>
    <string name="pref_summary_fullscreen">Hide all bars</string>
    <string name="pref_title_fullscreen">Fullscreen</string>
    <string name="pref_summary_land_ded_only">Show DED only in landscape mode</string>
    <string name="pref_title_land_ded_only">DED-only Landscape</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_exit">Exit</string>
    <string name="dialog_exit_message">Exit Falcon ICP?</string>
    <string name="dialog_exit">Exit</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="font_color">#15E400</string>
    <string-array name="menu_connected">
        <item>@string/menu_disconnect</item>
        <item>@string/menu_settings</item>
        <item>@string/menu_exit</item>
    </string-array>
    <string-array name="menu_disconnected">
        <item>@string/menu_connect</item>
        <item>@string/menu_settings</item>
        <item>@string/menu_exit</item>
    </string-array>
    
</resources>
