<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:gravity="top"
    android:padding="0dp"
    tools:context=".FalconICP" >
    
    <LinearLayout
        android:id="@+id/functionkeys"
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="#101010"
        android:padding="0dp" >
        
        	<ImageButton
	        android:id="@+id/COM1Button"
	        android:layout_width="wrap_content"
	        android:layout_height="fill_parent"
	        android:layout_weight="1"
	        android:padding="0dp"
	        android:src="@drawable/comone"
	        android:background="@android:color/transparent"
	        android:contentDescription="@string/com1" />

        	<ImageButton
	        android:id="@+id/COM2Button"
	        android:layout_width="wrap_content"
	        android:layout_height="fill_parent"
	        android:layout_weight="1"
	        android:padding="0dp"
	        android:src="@drawable/comtwo"
	        android:background="@android:color/transparent"
	        android:contentDescription="@string/com2" />
        	<!--  
        	<ImageButton
	        android:id="@+id/IFFButton"
	        android:layout_width="wrap_content"
	        android:layout_height="fill_parent"
	        android:layout_weight="1"
	        android:padding="0dp"
	        android:src="@drawable/iff"
	        android:background="@android:color/transparent"
	        android:contentDescription="@string/iff" />
        	-->
        	<ImageButton
	        android:id="@+id/ListButton"
	        android:layout_width="wrap_content"
	        android:layout_height="fill_parent"
	        android:layout_weight="1"
	        android:padding="0dp"
	        android:src="@drawable/list"
	        android:background="@android:color/transparent"
	        android:contentDescription="@string/list" />
        	
        	<ImageButton
	        android:id="@+id/AAButton"
	        android:layout_width="wrap_content"
	        android:layout_height="fill_parent"
	        android:layout_weight="1"
	        android:padding="0dp"
	        android:src="@drawable/aa"
	        android:background="@android:color/transparent"
	        android:contentDescription="@string/aa" />

        	<ImageButton
       	    android:id="@+id/AGButton"
       	    android:layout_width="wrap_content"
       	    android:layout_height="fill_parent"
       	    android:layout_weight="1"
       	    android:background="@android:color/transparent"
       	    android:contentDescription="@string/ag"
       	    android:padding="0dp"
       	    android:src="@drawable/ag" />
        	
    </LinearLayout>
    
    <org.bitbucket.mjanczykowski.falconicp.DataEntryDisplay
        android:id="@+id/ded"
        android:layout_width="fill_parent"
        android:layout_height="110dp"
        android:layout_below="@id/functionkeys"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" />
    
    <RelativeLayout
        android:id="@+id/keypad"
        android:layout_below="@id/ded"
        android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:background="#101010"
    	android:paddingTop="20dp"
    	android:paddingLeft="10dp"
    	android:paddingRight="10dp" >
	        <ImageButton
	        android:id="@+id/ICPButton1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:layout_alignParentLeft="true"
	        android:padding="0dp"
	        android:src="@drawable/button1"
	        android:contentDescription="@string/icpbutton1" />
	        
	        <ImageButton
	        android:id="@+id/ICPButton2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@id/ICPButton1"
	        android:padding="0dp"
	        android:layout_marginLeft="20dp"
	        android:src="@drawable/button2"
	        android:contentDescription="@string/icpbutton2" />
	        
	        <ImageButton
	        android:id="@+id/ICPButton3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@id/ICPButton2"
	        android:padding="0dp"
	        android:layout_marginLeft="20dp"
	        android:src="@drawable/button3"
	        android:contentDescription="@string/icpbutton3" />
	        
	        <ImageButton
	        android:id="@+id/ICPButtonRCL"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@id/ICPButton3"
	        android:padding="0dp"
	        android:layout_marginLeft="40dp"
	        android:src="@drawable/button_rcl"
	        android:contentDescription="@string/icpbuttonrcl" />
	        
	        <ImageButton
	        android:id="@+id/ICPButton4"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@id/ICPButton1"
	        android:layout_marginTop="20dp"
	        android:padding="0dp"
	        android:src="@drawable/button4"
	        android:contentDescription="@string/icpbutton4" />
	        
	        <ImageButton
	        android:id="@+id/ICPButton5"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@id/ICPButton4"
	        android:padding="0dp"
	        android:layout_marginLeft="20dp"
	        android:layout_alignTop="@id/ICPButton4"
	        android:src="@drawable/button5"
	        android:contentDescription="@string/icpbutton5" />
	        
	        <ImageButton
	        android:id="@+id/ICPButton6"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@id/ICPButton5"
	        android:layout_alignTop="@id/ICPButton4"
	        android:padding="0dp"
	        android:layout_marginLeft="20dp"
	        android:src="@drawable/button6"
	        android:contentDescription="@string/icpbutton6" />
	        
	        <ImageButton
	        android:id="@+id/ICPButtonENTR"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@id/ICPButton6"
	        android:layout_alignTop="@id/ICPButton4"
	        android:padding="0dp"
	        android:layout_marginLeft="40dp"
	        android:src="@drawable/button_entr"
	        android:contentDescription="@string/icpbuttonent" />
	        
	        <ImageButton
	        android:id="@+id/ICPButton7"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@id/ICPButton4"
	        android:layout_marginTop="20dp"
	        android:padding="0dp"
	        android:src="@drawable/button7"
	        android:contentDescription="@string/icpbutton7" />
	        
	        <ImageButton
	        android:id="@+id/ICPButton8"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@id/ICPButton7"
	        android:padding="0dp"
	        android:layout_marginLeft="20dp"
	        android:layout_alignTop="@id/ICPButton7"
	        android:src="@drawable/button8"
	        android:contentDescription="@string/icpbutton8" />
	        
	        <ImageButton
	        android:id="@+id/ICPButton9"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@id/ICPButton8"
	        android:layout_alignTop="@id/ICPButton7"
	        android:padding="0dp"
	        android:layout_marginLeft="20dp"
	        android:src="@drawable/button9"
	        android:contentDescription="@string/icpbutton9" />
	        
	        <ImageButton
	        android:id="@+id/ICPButton0"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@id/ICPButton9"
	        android:layout_alignTop="@id/ICPButton7"
	        android:padding="0dp"
	        android:layout_marginLeft="20dp"
	        android:src="@drawable/button0"
	        android:contentDescription="@string/icpbutton0" />
	        
	        <ImageButton
	        android:id="@+id/ICPArrowUp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="@android:color/transparent"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@id/ICPButton7"
	        android:layout_marginTop="40dp"
	        android:padding="0dp"
	        android:src="@drawable/arrowup"
	        android:contentDescription="@string/arrow_up" />
	        
	        <ImageButton
	        android:id="@+id/ICPArrowDown"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="@android:color/transparent"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@id/ICPArrowUp"
	        android:layout_marginTop="0dp"
	        android:padding="0dp"
	        android:src="@drawable/arrowdown"
	        android:contentDescription="@string/arrow_down" />
	        
	        <org.bitbucket.mjanczykowski.falconicp.DCSView
	        android:id="@+id/DCS"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@id/ICPArrowUp"
	        android:padding="0dp"
	        android:layout_marginLeft="20dp"
	        android:layout_below="@id/ICPButton8"
	        android:layout_marginTop="30dp"
	        android:src="@drawable/dcs_center"
	        android:contentDescription="@string/dcs" />
	        
	        <org.bitbucket.mjanczykowski.falconicp.DriftWarnSwitch
	        android:id="@+id/DriftWarn"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@id/DCS"
	        android:padding="0dp"
	        android:layout_marginLeft="20dp"
	        android:layout_below="@id/ICPButton8"
	        android:layout_marginTop="30dp"
	        android:src="@drawable/driftwarn_center"
	        android:contentDescription="@string/driftwarn" />
        
    </RelativeLayout>
</RelativeLayout>
